remove build from node test

--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -40,6 +40,8 @@ commands:
       - run: rustup default nightly  
       - run: rustup target add wasm32-unknown-unknown --toolchain nightly
       - run: cargo install taplo-cli --locked 
+        # nextest, faster test runner
+      - run: curl -LsSf https://get.nexte.st/latest/linux | tar zxf - -C ${CARGO_HOME:-~/.cargo}/bin
   fmt-lint:
     steps:
       - run: cargo fmt --check
@@ -103,7 +105,8 @@ jobs:
       - increase-swap
       - install-dependencies-and-checkout
       - run: 
-          command: pushd node && cargo build && cargo test
+          command: pushd node && cargo test
+          # command: pushd node && cargo nextest
           no_output_timeout: 45m
   node-benchmark:
     machine:
