--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -103,10 +103,10 @@ jobs:
     steps:
       - increase-swap
       - install-dependencies-and-checkout
-        # fast test runner
+        # install nextest, fast test runner
       - run: curl -LsSf https://get.nexte.st/latest/linux | tar zxf - -C ${CARGO_HOME:-~/.cargo}/bin
       - run: 
-          command: pushd node && cargo nextest run
+          command: pushd node && cargo build && cargo test
           no_output_timeout: 45m
   node-benchmark:
     machine:
