--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -10,7 +10,6 @@ use_try_shorthand=true   # replace any `try!` (2015 Rust) with `?`
 condense_wildcard_suffixes  =true # replace: (a,b,_,_)=(1, 2, 3, 4); -> (a,b,..)=(1, 2, 3, 4);
 format_code_in_doc_comments =true # format code blocks in doc comments
 format_macro_matchers       =true # $a: ident -> $a:ident
-format_strings              =true # break and insert newlines for long string literals 
 match_block_trailing_comma  =true # include comma in match blocks after '}'
 normalize_comments          =true # convert /*..*/ to //.. where possible
 reorder_impl_items          =true # move `type` and `const` declarations to top of impl block
@@ -35,8 +34,7 @@ inline_attribute_width=60    # inlines #[cfg(test)]\nmod test -> #[cfg(test)] mo
 max_width             =100   # default: 100
 use_small_heuristics  ="Max" # don't ever newline short of `max_width`.
 wrap_comments         =true  # wrap comments at `comment_width`
-# format_strings = true # wrap strings at `max_length`
+format_strings        =true # wrap strings at `max_length`
 
 # tabs and spaces (use spaces
 hard_tabs =false # (def: false) use spaces over tabs
-tab_spaces=2     # 2 > 4, it's just math.
