--- a/pallets/free-tx/Cargo.toml
+++ b/pallets/free-tx/Cargo.toml
@@ -18,6 +18,7 @@ log               ={ version="0.4.0", default-features=false }
 [dev-dependencies]
 sp-core                        ={ git="https://github.com/paritytech/substrate", branch="master" }
 sp-io                          ={ git="https://github.com/paritytech/substrate", branch="master" }
+sp-tracing                     ={ version="5.0.0", git="https://github.com/paritytech/substrate", branch="master" }
 pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
 pallet-session                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
 pallet-timestamp               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
