x25519-ChaCha20Poly1305 for SignedMessage
This commit adds static-static DH between clients
and the threshold server to arrive at a shared
secret for use in ChaCha20Poly1305 for threshold
key encryption

Signed-off-by: John Sahhar <john@entropy.xyz>

--- a/pallets/staking/Cargo.toml
+++ b/pallets/staking/Cargo.toml
@@ -55,6 +55,7 @@ version         ="6.0.0"
 pallet-staking={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
 sp-runtime    ={ version="6.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
 sp-std        ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="master", default-features=false }
+sp-core       ={ package="sp-core", git="https://github.com/paritytech/substrate", branch="master", default-features=false }
 
 [dev-dependencies]
 pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
