--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -5,10 +5,17 @@ edition="2021"
 
 [dependencies]
 # Common
-serde     ={ version="1.0", features=["derive"] }
-serde_json="1.0"
-anyhow    ="1.0.53"
-thiserror ="1.0.31"
+serde           ={ version="1.0", features=["derive"] }
+serde_json      ="1.0"
+anyhow          ="1.0.53"
+thiserror       ="1.0.31"
+blake2          ="0.10.4"
+x25519-dalek    ="2.0.0-pre.1"
+chacha20poly1305="0.10.1"
+rand_core       ="0.6.4"
+generic-array   ="0.14.6"
+zeroize         ="1.5.7"
+hex             ="*"
 
 # Async
 futures="0.3"
@@ -30,7 +37,7 @@ tofn              ={ git="https://github.com/Entropyxyz/tofn", branch="main" }
 substrate-common={ path="../substrate-common", default-features=false }
 kvdb            ={ path="../kvdb", default-features=false }
 constraints     ={ path="../constraints" }
-
+hex-literal     ="0.3.4"
 # Logging
 log               ="0.4.17"                                          # todo: remove, overlaps tracing
 tracing           ="0.1"
@@ -51,3 +58,5 @@ serial_test  ="0.8.0"
 [features]
 default=['std']
 std    =["sp-core/std"]
+unsafe =[]
+alice  =[]
