--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -5,17 +5,18 @@ edition="2021"
 
 [dependencies]
 # Common
-serde           ={ version="1.0", features=["derive"] }
-serde_json      ="1.0"
-anyhow          ="1.0.53"
-thiserror       ="1.0.31"
-blake2          ="0.10.4"
-x25519-dalek    ="2.0.0-pre.1"
-chacha20poly1305="0.10.1"
-rand_core       ="0.6.4"
-generic-array   ="0.14.6"
-zeroize         ="1.5.7"
-hex             ="*"
+serde              ={ version="1.0", features=["derive"] }
+serde_json         ="1.0"
+anyhow             ="1.0.53"
+thiserror          ="1.0.31"
+blake2             ="0.10.4"
+x25519-dalek       ="2.0.0-pre.1"
+chacha20poly1305   ="0.10.1"
+rand_core          ="0.6.4"
+generic-array      ="0.14.6"
+zeroize            ="1.5.7"
+hex                ="*"
+reqwest-eventsource="0.4"
 
 # Async
 futures="0.3"
