--- a/pallets/staking/Cargo.toml
+++ b/pallets/staking/Cargo.toml
@@ -56,12 +56,14 @@ pallet-staking={ version="4.0.0-dev", default-features=false, git='https://githu
 sp-runtime    ={ version="6.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
 sp-std        ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="master", default-features=false }
 sp-core       ={ package="sp-core", git="https://github.com/paritytech/substrate", branch="master", default-features=false }
+sp-consensus-babe = { version = "0.10.0-dev", default-features = false, git='https://github.com/paritytech/substrate.git', branch="master" }
+log                  ={ version="0.4.0", default-features=false }
+pallet-session                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
 
 [dev-dependencies]
 pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
 pallet-timestamp               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
 frame-election-provider-support={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
-pallet-session                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
 sp-staking                     ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
 pallet-staking-reward-curve    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
 pallet-bags-list               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
@@ -78,8 +80,12 @@ std=[
   'sp-runtime/std',
   "sp-std/std",
   'pallet-staking/std',
+    'pallet-session/std',
   'pallet-balances/std',
   'frame-benchmarking/std',
   "sp-npos-elections/std",
+	 "sp-consensus-babe/std",
+	   'log/std',
+
 ]
 try-runtime=['frame-support/try-runtime']
