--- a/crypto/testing-utils/Cargo.toml
+++ b/crypto/testing-utils/Cargo.toml
@@ -6,11 +6,11 @@ edition="2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sp-keyring        ="6.0.0"
+subxt             ={ git="https://github.com/jakehemmerle/subxt.git", branch="substrate-master" }
+sp-keyring        ={ package="sp-keyring", git="https://github.com/paritytech/substrate", branch="master" }
 project-root      ="0.2.2"
-sp-core           ={ version="6.0.0", default-features=false }
+sp-core           ={ package="sp-core", git="https://github.com/paritytech/substrate", branch="master" }
 env_logger        ="0.9.0"
 log               ="0.4.14"
 which             ="4.0.2"
-subxt             ={ git="https://github.com/paritytech/subxt.git" }
 parity-scale-codec="3.0.0"
