--- a/node/rpc/Cargo.toml
+++ b/node/rpc/Cargo.toml
@@ -11,9 +11,10 @@ repository="https://github.com/paritytech/substrate/"
 targets=["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-jsonrpc-core                  ="18.0.0"
-node-primitives               ={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="master" }
-pallet-contracts-rpc          ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
+jsonrpsee={ version="0.15.1", features=["server"] }
+# jsonrpc-core                  ="18.0.0"
+node-primitives={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="master" }
+# pallet-contracts-rpc          ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
 pallet-mmr-rpc                ={ version="3.0.0", git='https://github.com/paritytech/substrate.git', branch="master" }
 pallet-transaction-payment-rpc={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
 sc-client-api                 ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
@@ -24,6 +25,7 @@ sc-chain-spec                 ={ version="4.0.0-dev", git='https://github.com/pa
 sc-finality-grandpa           ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
 sc-finality-grandpa-rpc       ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
 sc-rpc-api                    ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
+sc-rpc-spec-v2                ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
 sc-rpc                        ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
 sc-sync-state-rpc             ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
 sp-api                        ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
