--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -26,7 +26,7 @@ rocket ={ version="0.5.0-rc.1", default-features=false, features=["json"] }
 reqwest={ version="0.11", features=["json", "stream"] }
 
 # Substrate
-subxt             ={ git="https://github.com/jakehemmerle/subxt.git", branch="substrate-master" }
+subxt             ={ package="subxt", git="https://github.com/jakehemmerle/subxt.git", branch="substrate-master" }
 parity-scale-codec="3.0.0"
 sp-keyring        ={ package="sp-keyring", git="https://github.com/paritytech/substrate", branch="master" }
 sp-core           ={ package="sp-core", git="https://github.com/paritytech/substrate", branch="master" }
